# RaiChess

./: .gitignore  ANDROID_TESTING.md  ARCHITECTURE.md  AndroidManifest.xml  BRANDING.md  CONTRIBUTING.md  EloCalculator.kt  GIT_SETUP.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  RAICHESS_COMPLETE.md  README.md  TECHNICAL_PLAN.md  Theme.kt  Type.kt  build.gradle.kts  chess_app_plan.md  gradle.properties  settings.gradle.kts  strings.xml  themes.xml
.github/workflows/: android-build.yml  build.yml  github.yml  refresh-puzzles.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/puzzles/: puzzles.csv
app/src/main/assets/stockfish/: NOTICE.md  engine.html
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/raichess/: MainActivity.kt
app/src/main/java/com/raichess/data/analysis/: AnalysisCoordinator.kt
app/src/main/java/com/raichess/data/database/: Entities.kt  GameDao.kt  PracticeDao.kt  RaiChessDatabase.kt
app/src/main/java/com/raichess/data/diagnostics/: EngineDiagnostics.kt
app/src/main/java/com/raichess/data/engine/: ChessEngine.kt  EngineFactory.kt  RaiEngine.kt  StockfishNativeEngine.kt  StockfishWasmEngine.kt  UciInfoParser.kt
app/src/main/java/com/raichess/data/repository/: GameRepository.kt  LessonRepository.kt  PlayerProfileRepository.kt  PracticeRepository.kt  PuzzleRepository.kt  SettingsRepository.kt
app/src/main/java/com/raichess/domain/model/: CompletedGame.kt  EloCalculator.kt  GameMode.kt  LanFormat.kt  MaterialBalance.kt  MoveClassifier.kt  PositionAnalysis.kt  PracticePosition.kt  PracticeRating.kt  Puzzle.kt  ThemeTag.kt  UndoPenalty.kt  WinProbability.kt
app/src/main/java/com/raichess/domain/usecase/: DrillSelector.kt  GameAnalyzer.kt  HintAdvisor.kt  LessonPlanner.kt  PuzzleDrill.kt  ThemeTagger.kt  WeaknessProfiler.kt
app/src/main/java/com/raichess/ui/components/: RaiLogo.kt
app/src/main/java/com/raichess/ui/game/: ChessPieceIcons.kt  GameScreen.kt  GameViewModel.kt
app/src/main/java/com/raichess/ui/home/: HomeScreen.kt
app/src/main/java/com/raichess/ui/practice/: PracticeScreen.kt  PracticeViewModel.kt
app/src/main/java/com/raichess/ui/review/: ReviewScreen.kt  ReviewViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_piece_bb.xml  ic_piece_bk.xml  ic_piece_bn.xml  ic_piece_bp.xml  ic_piece_bq.xml  ic_piece_br.xml  ic_piece_wb.xml  ic_piece_wk.xml  ic_piece_wn.xml  ic_piece_wp.xml  ic_piece_wq.xml  ic_piece_wr.xml
app/src/main/res/mipmap/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
mnt/user-data/outputs/raichess/: build.gradle.kts
tools/: fetch_lichess_puzzles.py
(+29 files in other folders)
